removed margin to fix center position + overflow on mobile (#9351)
* removed margin to fix center po

* added PR number

--- a/packages/design-system/src/styles/theme/oc-position.scss
+++ b/packages/design-system/src/styles/theme/oc-position.scss
@@ -34,7 +34,7 @@
 }
 
 .oc-position-medium {
-  margin: 30px;
+  margin: 30px 0;
   max-width: calc(100% - 60px);
 }
 
